--- a/pom.xml
+++ b/pom.xml
@@ -1204,7 +1204,7 @@
         <product.identity.version>5.3.0-SNAPSHOT</product.identity.version>
 
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>5.5.7</carbon.identity.framework.version>
+        <carbon.identity.framework.version>5.5.8</carbon.identity.framework.version>
 
         <!--Identity Repo Versions-->
         <identity.local.auth.basicauth.version>5.2.2</identity.local.auth.basicauth.version>
@@ -1233,6 +1233,7 @@
         <identity.tool.samlsso.validator.version>5.1.2</identity.tool.samlsso.validator.version>
         <identity.data.publisher.authentication.version>5.1.3</identity.data.publisher.authentication.version>
         <identity.data.publisher.oauth.version>0.1.1</identity.data.publisher.oauth.version>
+        <identity.data.publisher.audit.version>1.0.0-SNAPSHOT</identity.data.publisher.audit.version>
         <!--<identity.carbon.auth.thrift.version>5.5.0-SNAPSHOT</identity.carbon.auth.thrift.version>-->
         <!--<identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identity.application.auth.oidc.version>-->
         <identity.governance.version>0.1.7</identity.governance.version>
