--- a/carbon-is/components/user-mgt/org.wso2.carbon.identity.user.mgt/pom.xml
+++ b/carbon-is/components/user-mgt/org.wso2.carbon.identity.user.mgt/pom.xml
@@ -22,12 +22,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>org.wso2.carbon.identity.user.mgt.parent</artifactId>
-        <groupId>org.wso2.carbon.identity</groupId>
+        <groupId>org.wso2.carbon.identity.user.mgt</groupId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>WSO2 User Management Backend</name>
     <artifactId>org.wso2.carbon.identity.user.mgt</artifactId>
 
     <dependencies>
