--- a/carbon-is/components/user-mgt/pom.xml
+++ b/carbon-is/components/user-mgt/pom.xml
@@ -22,11 +22,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.wso2.carbon.is.userportal</groupId>
+    <groupId>org.wso2.carbon.identity.user.mgt</groupId>
     <artifactId>org.wso2.carbon.identity.user.mgt.parent</artifactId>
     <packaging>pom</packaging>
-
-    <name>WSO2 Identity Server - User Portal - Parent</name>
+    <version>1.0.0-SNAPSHOT</version>
+    <name>WSO2 User Management Parent</name>
     <url>http://wso2.org</url>
 
     <parent>
