--- a/carbon-is/components/user-profile/osgi-services/org.wso2.carbon.user.profile/pom.xml
+++ b/carbon-is/components/user-profile/osgi-services/org.wso2.carbon.user.profile/pom.xml
@@ -35,6 +35,10 @@
         <version>6.0.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <checkstyle.skip>true</checkstyle.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.osgi</groupId>
@@ -53,14 +57,14 @@
             <artifactId>org.wso2.carbon.security.caas</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.osgi</groupId>
+            <groupId>org.wso2.eclipse.osgi</groupId>
             <artifactId>org.eclipse.osgi.services</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.felix</groupId>-->
+            <!--<artifactId>org.apache.felix.scr.ds-annotations</artifactId>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
@@ -72,16 +76,16 @@
                     <instructions>
                         <Import-Package>
                             org.osgi.framework,
-                            org.slf4j.*;version="${slf4j.version.range}",
+                            org.slf4j.*;version="${slf4j.import.version.range}",
                             org.wso2.carbon.security.caas.user.core.*;version="${carbon.security.caas.version}"
                         </Import-Package>
-                        <Private-Package>org.wso2.carbon.profile.internal.*</Private-Package>
+                        <Private-Package>org.wso2.carbon.user.profile.internal.*</Private-Package>
                         <Export-Package>
-                            !org.wso2.carbon.profile.view.internal.*,
-                            org.wso2.carbon.profile.bundle.*;version="${version}"
+                            !org.wso2.carbon.user.profile.internal.*,
+                            org.wso2.carbon.user.profile.*;version="${version}"
                         </Export-Package>
                         <Bundle-Activator>
-                            org.wso2.carbon.profile.internal.Activator
+                            org.wso2.carbon.user.profile.internal.Activator
                         </Bundle-Activator>
                     </instructions>
                 </configuration>
