Adding C5 Identity Provider implementation

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
     </scm>
 
     <modules>
+        <module>carbon-is</module>
         <module>product</module>
         <module>portal/user</module>
     </modules>
