Adding C5 Identity Provider implementation

--- a/carbon-is/pom.xml
+++ b/carbon-is/pom.xml
@@ -35,4 +35,8 @@
     <name>WSO2 Identity Server - User Portal</name>
     <url>http://wso2.org</url>
 
+    <modules>
+        <module>components/identity-provider</module>
+    </modules>
+
 </project>
