--- a/portal/user/app/org.wso2.is.portal.user.app/pom.xml
+++ b/portal/user/app/org.wso2.is.portal.user.app/pom.xml
@@ -47,7 +47,7 @@
             <plugin>
                 <groupId>org.wso2.carbon.uuf.maven</groupId>
                 <artifactId>carbon-uuf-maven-plugin</artifactId>
-                <version>${carbon-uuf-maven-plugin.version}</version>
+                <version>${carbon.uuf.maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>create</id>
