added <extensions>true tag for the UUF Maven plugin

--- a/portal/user/theme/org.wso2.is.portal.user.theme.default/pom.xml
+++ b/portal/user/theme/org.wso2.is.portal.user.theme.default/pom.xml
@@ -40,9 +40,10 @@
                 <groupId>org.wso2.carbon.uuf.maven</groupId>
                 <artifactId>carbon-uuf-maven-plugin</artifactId>
                 <version>${carbon.uuf.maven-plugin.version}</version>
+                <extensions>true</extensions>
                 <executions>
                     <execution>
-                        <id>create</id>
+                        <id>make</id>
                         <phase>package</phase>
                         <goals>
                             <goal>create-theme</goal>
