--- a/portal/user/osgi-service/org.wso2.is.portal.user.client.association/pom.xml
+++ b/portal/user/osgi-service/org.wso2.is.portal.user.client.association/pom.xml
@@ -31,8 +31,8 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
-    <name>WSO2 User Profile Bundle</name>
-    <description>This feature contains the OSGi service for User profile</description>
+    <name>WSO2 User Account Association</name>
+    <description>This feature contains the OSGi service for user account association</description>
     <url>http://wso2.org</url>
 
     <properties>
@@ -60,7 +60,37 @@
             <groupId>org.wso2.eclipse.osgi</groupId>
             <artifactId>org.eclipse.osgi.services</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam</artifactId>
+            <version>${pax.exam.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam-container-native</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam-testng</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ops4j.pax.exam</groupId>
+            <artifactId>pax-exam-link-mvn</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.apache.felix</groupId>-->
             <!--<artifactId>org.apache.felix.scr.ds-annotations</artifactId>-->
