Adding local and federated account association client service API classes

--- a/pom.xml
+++ b/pom.xml
@@ -844,6 +844,11 @@
                 <version>${org.wso2.carbon.identity.inbound.provisioning.scim2.version}</version>
                 <type>zip</type>
             </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon</groupId>
+                <artifactId>org.wso2.carbon.container</artifactId>
+                <version>${carbon.kernel.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
